# HelioAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  indexer.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/recipes/: mvab.py  pitch_angle_dist.py  pressure_balance.py  rankine_hugoniot.py  superposed_epoch.py  theta_bn.py  walen_test.py
docker/: docker-compose.yml
helioai/: __init__.py  config.py  datastore.py  export.py  indexer.py  logging_config.py  mcp_server.py  workspace.py
helioai/core/: agent_loop.py  session.py  skills_loader.py  sub_agents.py  tool_exec.py
helioai/core/llm/: __init__.py  azure_openai.py  base.py  factory.py  gemini.py  groq.py  ollama.py
helioai/core/skills/data_analyst/: SKILL.md
helioai/core/skills/helioai_helper/: SKILL.md
helioai/core/skills/parameter_hunter/: SKILL.md
helioai/core/skills/plasma_physicist/: SKILL.md
helioai/core/skills/plotting/: SKILL.md
helioai/interfaces/: cli.py  jupyter_magic.py
helioai/interfaces/web/: app.py
helioai/interfaces/web/static/: app.js  index.html  style.css
helioai/tools/: catalog_tools.py  plasmapy_tools.py  rag.py  recipes.py  registry.py  sandbox.py  setup.py  speasy_tools.py
scripts/: token_bench.py
tests/: conftest.py  test_agent_loop.py  test_catalog_tools.py  test_cli.py  test_datastore.py  test_export.py  test_indexer.py  test_jupyter_magic.py  test_llm_retry.py  test_mcp_server.py  test_plasmapy_tools.py  test_profile.py  test_rag.py  test_recipes.py  test_sandbox.py  test_save_catalog.py  test_scope.py  test_session_store.py  test_skills_loader.py  test_speasy_tools.py  test_storage_namespacing.py  test_sub_agents.py  test_tool_exec.py  test_web.py
