[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helioai"
version = "0.1.0"
description = "AI agent for heliophysics and space plasma data analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["heliophysics", "plasma", "space physics", "AI agent", "MCP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "speasy>=1.4",
    "plasmapy>=2024.5",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "openai>=1.30",
    "groq>=0.9",
    "google-genai>=0.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "astropy>=6.0",
    "ipython>=8.0",
    "transformers<5.0",
    "nbformat>=5.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
helioai = "helioai.interfaces.cli:main"
helioai-mcp = "helioai.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["helioai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=helioai --cov-report=term-missing --cov-fail-under=60"

[tool.coverage.run]
omit = [
    "helioai/core/llm/groq.py",
    "helioai/core/llm/gemini.py",
    "helioai/core/llm/azure_openai.py",
    "helioai/core/llm/ollama.py",
    "helioai/interfaces/cli.py",
    "helioai/interfaces/web/app.py",
    "helioai/logging_config.py",
    "helioai/tools/setup.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
